SYS-fix-35c3: Misc bugfixes from bugreport forum

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35c2#
+Текущая версия #35c3#
 ~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -219,6 +219,8 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
     Добавлено новая  иконка  действия  -  "Статистика".  Её  тултип  показывает
     статистику игрока
     Расширена подсказка
+[+] Смайлы
+    В чат добавлены следующие смайлы: nea, ups, quote, shout, sorry, spiteful
 
 [~] Обзор планеты
     Переписана процедура отсылки переработчиков
@@ -261,6 +263,7 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
 [%] Локализация
+    Исправлено описание фаланги
     Исправлена ошибка чтения информации о локализации
     Небольшая правка опечаток в русской локализации
 [%] Альянсы
@@ -280,6 +283,11 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
 [%] UBEv3
     Исправлена ошибка с определением кораблей с  ID  >  300  как  защиты  и  их
     восстановлением. Ошибка проявляется только в сторонних модулях
+[%] Альянсы
+    Исправлена проблема с отсылкой сообщений всему Альянсу
+[%] Корабли
+    Исправлено нулевое потребление некоторых юнитов (в частности  -  шпионского
+    зонда)
 
 [@] Темплейты
     Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
