--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35c3#
+Текущая версия #35c4#
 ~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -259,6 +259,8 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
     Изменено сообщение при регистрации игрока
 [~] Тёмная Материя
     Немного переработан интерфейс страницы
+[~] Админка/Утилиты
+    В шифрование паролей добавлен генератор паролей
 
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
