--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35c5#
+Текущая версия #35c6#
 ~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -168,6 +168,11 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
     Теперь для корабля показываются данные для всех типов  двигателей,  которые
     возможно на него установить
     Улучшено отображение информации о кораблях и обороне
+[!] Поиск
+    Полностью переписан поиск
+    Добавлена сортировка по Альянсу, имени игрока, имени планеты
+    Настройка сервера "Скрывать ссылки на  ЛС"  теперь  распространяется  и  на
+    результаты поиска
 [!] Документация
     Вся документация сконвертирована в UTF-8
 
