--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35c8#
+Текущая версия #35c9#
 ~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -170,6 +170,7 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
     Улучшено отображение информации о кораблях и обороне
 [!] Поиск
     Полностью переписан поиск
+    Добавлена подсказка
     Добавлена сортировка по Альянсу, имени игрока, имени планеты
     Настройка сервера "Скрывать ссылки на  ЛС"  теперь  распространяется  и  на
     результаты поиска
