--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35c9#
+Текущая версия #35c10#
 ~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -267,6 +267,9 @@ Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
     Немного переработан интерфейс страницы
 [~] Админка/Утилиты
     В шифрование паролей добавлен генератор паролей
+[~] Инициализация
+    Изменен алгоритм определения корневого каталога СН. Теперь движок корректно
+    работает в каталогах-симлинках
 
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
