DOC-36a0.9: Updated txt2html converter

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,17 +11,15 @@
 
 
 
-Текущая версия #36a0.8#
+Текущая версия #36a0.9#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [!] UBEv4
-    Написанн с нуля боевой движок и боевые отчеты
-
+    Написан с нуля боевой движок и боевые отчеты
     Особенности подготовки к бою:
     1. Бой теперь считается не по $time_now, а по времени прилета  флота  -  на
     случай, если бой сильно отложенный. Например, при сбоях движка  или  низкой
     активности  сервера.  Так  будут  отработаны  корректно  все  удержания   в
     правильное время
-
     Особенности хода боя:
     1. Броня не регенерируется между раундами
     2. Если броня упала  ниже  75%  -  корабль  имеет  шанс  взорваться  равный
@@ -30,7 +28,6 @@
     удержании участвуют флоты одного и того же  игрока,  то  прилетающие  флоты
     этого игрока будут сражаться на стороне защитника. Аккуратно смотрите, кого
     приглашает в САБ. Хе-хе
-
     Особенности подведения итогов боя:
     1. Если в бою участвует хотя бы один флот Админов с любой стороны - лом  не
     выпадает ни с кого!
@@ -46,7 +43,6 @@
     зависимости от результата боя
     6. Количество свободных полей на луне зависит от её размера и  определяется
     по формуле Размер/1000 с округлением вверх до целого
-
     Боевой отчет теперь состоит из трёх частей: "Основная  информация  о  бое",
     "Боевые потери" и лог раундов
     "Основная информация о бое" показывает:
@@ -58,7 +54,6 @@
     6. (Для миссии  "Уничтожить")  Состояние  кораблей  с  гравидвигателями  по
     итогам боя. Шанс уничтожения луны оставшимися кораблями и  результат  такой
     попытки. Шанс взрыва кораблей и итог миссии
-
     Раздел "Боевые потери" показывает:
     1. (На планетах) Количество восстановленных боевых сооружений
     2. Общие потери боевых единиц каждого из участвующих в бою игроков. Если  у
@@ -76,7 +71,6 @@
     момент боя, вывоз с планеты и ресурсы, потерянные из-за уменьшения трюмов
     6. Общие потери в ресурсах в пересчете на металл по курсу Черного Рынка  на
     момент проведения боя. Писькомерка для сравнения
-
     "Лог раундов" показывает результаты расчета каждого раунда для всех флотов
     1.  Показывает  координаты  и  тип  планеты,  с  которой  прилетели   флоты
     атакующих/защитников
@@ -92,7 +86,6 @@
        Красный - все оставшиеся боевые единицы уничтожены в этом раунде
        Число  в  скобках  в  столбце  потерь  -   количество   боевых   единиц,
        взорвавшихся в раунде из-за фатальных повреждений
-
     Доработан симулятор для поддержки изменений в UBEv4:
     1. Стандартный режим работы симулятора - полная определенность  результатов
     в зависимости от начальной конфигурации (галочка "Симуляция" включена)
