UBE-misc-36a0.10: All links to rw.php replaced with new ones

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.9#
+Текущая версия #36a0.10#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [!] UBEv4
     Написан с нуля боевой движок и боевые отчеты
@@ -86,6 +86,7 @@
        Красный - все оставшиеся боевые единицы уничтожены в этом раунде
        Число  в  скобках  в  столбце  потерь  -   количество   боевых   единиц,
        взорвавшихся в раунде из-за фатальных повреждений
+    В боевом отчете координаты планет являются ссылками на Вселенную
     Доработан симулятор для поддержки изменений в UBEv4:
     1. Стандартный режим работы симулятора - полная определенность  результатов
     в зависимости от начальной конфигурации (галочка "Симуляция" включена)
@@ -97,6 +98,13 @@
     запись боевого отчета с результатом симуляции в БД
     3. В  стандартном  режиме  если  шанс  образования  луны  больше  1  всегда
     образуется луна со средним размером для данного шанса
+
+[~] Чат
+    Добавился новый BBCode "s" - зачёркнутый текст
+
+[@] Модули
+    Устранена ошибка на случай, если модуль не возвращает темплейта. Такого  не
+    должно происходить в нормальной ситуации
 
 
 
