UBE-fix-36a0.15: Bugfixes. Preparations for Captains module

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.14#
+Текущая версия #36a0.15#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [!] UBEv4
     Написан с нуля боевой движок и боевые отчеты
@@ -41,7 +41,8 @@
     5. Теперь в рейдовый опыт засчитываются исключительно одиночные  атаки.  Ни
     "Удержание", ни "САБ" не засчитывается. Т.е. вообще не засчитываются -  вне
     зависимости от результата боя
-    6. Количество свободных полей на луне зависит от её размера и  определяется
+    6. Теперь атаки на неактивных игроков ("i-шки") не приносят рейдовый опыт
+    7. Количество свободных полей на луне зависит от её размера и  определяется
     по формуле Размер/1000 с округлением вверх до целого
     Боевой отчет теперь состоит из трёх частей: "Основная  информация  о  бое",
     "Боевые потери" и лог раундов
