DOC-36a0.27: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,35 @@
 
 
 
-Текущая версия #36a0.25#
+Текущая версия #36a0.27#
 ~~~~~~~~~~~~~~~~~~~~~~~
+[#] Модуль "Капитаны"
+    Требуется СН не ниже 36a0.24
+    Капитан - это опытный командующий, который летает с флотами и за счет более тонкого управления флотами улучшает эффективные характеристики всех кораблей
+    Найм и управление Капитанами осуществляется через пункт меню "Капитаны" (сразу под "Наемниками")
+    Каждый Капитан привязан к определенной планете или луне. Нельзя иметь двух Капитанов на одном небесном теле. Капитан, летящий с флотом, все равно считается привязанным к планете
+    Капитана можно перевозить с одной планеты на другую миссией "Передислокация". При этом на время перелёта Капитан считается привязанным сразу к обоим планетам - стартовой и финишной
+    С флотом можно отправить только одного Капитана
+    При гибели флота Капитан так же погибает. Под "гибелью флота" подразумевается уничтожение всех кораблей флота. Это верно как для атакующих флотов, так и для флотов, стоящих в удержании
+    Капитан на планете не участвует в защите планеты при атаке - этим занимается Фортификатор. Зато при полном уничтожении всего планетарного флота такой Капитан не погибнет
+    За каждый выигранный простой бой (САБы и миссия "Уничтожить" не считаются) Капитан атакующего флота получает 1 пункт опыта. За "победы" над неактивными игроками опыт не начисляется. Так же не начисляется опыт, если бой закончился выигрышем атакующего за 1 раунд
+    Капитаны всегда улучшают характеристики кораблей своего флота - даже если участвуют в бою, за который они не получат опыта: атака на неактивных игроков, удержание, САБ, уничтожение луны и т.д.
+    При наборе определенного количества опыта Капитан получает новый уровень. Чем выше уровень - тем больше опыта нужно для получения следующего уровня
+    Повышение в уровне дает возможность улучшать умения Капитанов. Каждый уровень умений дает 1% к базовому значению соответствующей характеристики
+    Умения Капитана включают бонусы к щитам, броне и атаке
+    Уровни Капитана вкладываются в умения один раз и навсегда - поэтому заранее тщательно планируйте развитие своего Капитана
+
+    Уровни Капитанов указываются в списке юнитов на Обзоре Империи
+    На заднем фоне ячейки с уровнем выводится прогресс-бар развития Капитана с цветовым кодированием:
+      Пустая ячейка - Капитан не нанят, либо только что получил уровень
+      Красный прогресс-бар - до следующего уровня осталось больше 50% опыта
+      Оранжевый - не меньше 50% опыта, но меньше 80%
+      Желтый - не меньше 80% опыта
+      Зеленый - в следующем бою Капитан получит новый уровень
+
+    В списке флотов на странице "Флоты в полёте" и для своих флотов на странице "Обзор планеты" если во флоте есть Капитан перед количеством кораблей во флоте высвечивается "*", а в попапе состава показывается его уровень
+
+
 [!] UBEv4
     Написан с нуля боевой движок и боевые отчеты
     Особенности подготовки к бою:
@@ -100,12 +127,35 @@
     3. В  стандартном  режиме  если  шанс  образования  луны  больше  1  всегда
     образуется луна со средним размером для данного шанса
 
+[+] Меню
+    Редизайн меню
+    Изменен порядок расположения пунктов
+    Высота пункта меню увеличена до 16 пикселов
+    Добавлены иконки. Размер иконки теперь ограничен 14 пикселами в высоту
+
+[~] Навбар
+    Изменена разметка навбара, что бы его не перекашивало в случае вывода блока информации до него
+[~] Новости
+    Количество новостей ограничено 20-ю самыми свежими
 [~] Чат
     Добавился новый BBCode "s" - зачёркнутый текст
+[~] Флоты
+    Изменены ограничения на отправку Шпионов. Их можно посылать  в  одиночку  в
+    миссии Шпионаж, Передислокация и Транспорт. Во все остальные миссии Шпионов
+    тоже можно отсылать - но только в сопровождении других кораблей
+
+[%] Альянсы
+    Исправлена надпись при отправке письма членам Альянса
+[%] Обзор Империи
+    Исправлена пропажа индикации количества строящихся зданий
 
 [@] Модули
     Устранена ошибка на случай, если модуль не возвращает темплейта. Такого  не
     должно происходить в нормальной ситуации
+[@] Код
+    Переформатирован HTML-код обзора планеты
+[@] БД
+    В таблицу флотов добавлены идентификаторы планет старта/назначения
 
 
 
