UBE-misc-36a0.31: Debris now has not 100% from scratch or dropped resources

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.30#
+Текущая версия #36a0.31#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Модуль "Капитаны"
     Требуется СН не ниже 36a0.24
@@ -71,6 +71,10 @@
     6. Теперь атаки на неактивных игроков ("i-шки") не приносят рейдовый опыт
     7. Количество свободных полей на луне зависит от её размера и  определяется
     по формуле Размер/1000 с округлением вверх до целого
+    8. Изменен расчет поля обломков. Теперь на орбите оказывается от 30% до 70%
+    выброшенных за  борт  ресурсов  и  от  20%  до  40%  обломков  кораблей.  В
+    детерминированном симуляторе процент обломков на орбите всегда равен 30%, а
+    обломки, выброшенные из трюма всегда составляют 50% от потерь
     Боевой отчет теперь состоит из трёх частей: "Основная  информация  о  бое",
     "Боевые потери" и лог раундов
     "Основная информация о бое" показывает:
