NEWS-misc-36a0.32: On planet overview added hint to news list how to rid of it

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.31#
+Текущая версия #36a0.32#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Модуль "Капитаны"
     Требуется СН не ниже 36a0.24
@@ -141,6 +141,8 @@
     Изменена разметка навбара, что бы его не перекашивало в случае вывода блока информации до него
 [~] Новости
     Количество новостей ограничено 20-ю самыми свежими
+    На странице Обзора планеты добавлена подсказка как закрыть окно со  свежими
+    новостями
 [~] Чат
     Добавился новый BBCode "s" - зачёркнутый текст
 [~] Флоты
