FLT-fix-36a0.33: Fixed error scanning empty universe fleet with phalanx

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.32#
+Текущая версия #36a0.33#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Модуль "Капитаны"
     Требуется СН не ниже 36a0.24
@@ -154,6 +154,8 @@
     Исправлена надпись при отправке письма членам Альянса
 [%] Обзор Империи
     Исправлена пропажа индикации количества строящихся зданий
+[%] Флоты/Фаланга
+    Исправлена ошибка сканирования пустого места во Вселенной
 
 [@] Модули
     Устранена ошибка на случай, если модуль не возвращает темплейта. Такого  не
