--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36a0.33#
+Текущая версия #36a0.34#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Модуль "Капитаны"
     Требуется СН не ниже 36a0.24
@@ -145,6 +145,7 @@
     новостями
 [~] Чат
     Добавился новый BBCode "s" - зачёркнутый текст
+    В чате Альянса в нике участника теперь не указывается Альянс
 [~] Флоты
     Изменены ограничения на отправку Шпионов. Их можно посылать  в  одиночку  в
     миссии Шпионаж, Передислокация и Транспорт. Во все остальные миссии Шпионов
@@ -154,6 +155,7 @@
     Исправлена надпись при отправке письма членам Альянса
 [%] Обзор Империи
     Исправлена пропажа индикации количества строящихся зданий
+    Исправлена ошибка смещения фона для производящих зданий
 [%] Флоты/Фаланга
     Исправлена ошибка сканирования пустого места во Вселенной
 
