--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,33 +11,82 @@
 
 
 
-Текущая версия #36a1.12#
+Текущая версия #36d0#
 ~~~~~~~~~~~~~~~~~~~~~~~
+
+
+
+Project "SuperNova.WS" Release 36 "UBEv4 captains chat Happy New Year 2013!!!"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [#] Модуль "Капитаны"
     Требуется СН не ниже 36a0.24
-    Капитан - это опытный командующий, который летает с флотами и за счет более тонкого управления флотами улучшает эффективные характеристики всех кораблей
-    Найм и управление Капитанами осуществляется через пункт меню "Капитаны" (сразу под "Наемниками")
-    Каждый Капитан привязан к определенной планете или луне. Нельзя иметь двух Капитанов на одном небесном теле. Капитан, летящий с флотом, все равно считается привязанным к планете
-    Капитана можно перевозить с одной планеты на другую миссией "Передислокация". При этом на время перелёта Капитан считается привязанным сразу к обоим планетам - стартовой и финишной
+    Капитан - это опытный командующий, который летает с флотами и за счет более
+    тонкого  управления  флотами  улучшает  эффективные   характеристики   всех
+    кораблей
+    Найм и управление Капитанами осуществляется  через  пункт  меню  "Капитаны"
+    (сразу под "Наемниками")
+    Каждый Капитан привязан к определенной планете или луне. Нельзя иметь  двух
+    Капитанов на одном небесном теле. Капитан,  летящий  с  флотом,  все  равно
+    считается привязанным к планете
+    Капитана   можно   перевозить   с   одной   планеты   на   другую   миссией
+    "Передислокация". При этом на время перелёта Капитан считается  привязанным
+    сразу к обоим планетам - стартовой и финишной
     С флотом можно отправить только одного Капитана
-    При гибели флота Капитан так же погибает. Под "гибелью флота" подразумевается уничтожение всех кораблей флота. Это верно как для атакующих флотов, так и для флотов, стоящих в удержании
-    Капитан на планете не участвует в защите планеты при атаке - этим занимается Фортификатор. Зато при полном уничтожении всего планетарного флота такой Капитан не погибнет
-    За каждый выигранный простой бой (САБы и миссия "Уничтожить" не считаются) Капитан атакующего флота получает 1 пункт опыта. За "победы" над неактивными игроками опыт не начисляется. Так же не начисляется опыт, если бой закончился выигрышем атакующего за 1 раунд
-    Капитаны всегда улучшают характеристики кораблей своего флота - даже если участвуют в бою, за который они не получат опыта: атака на неактивных игроков, удержание, САБ, уничтожение луны и т.д.
-    При наборе определенного количества опыта Капитан получает новый уровень. Чем выше уровень - тем больше опыта нужно для получения следующего уровня
-    Повышение в уровне дает возможность улучшать умения Капитанов. Каждый уровень умений дает 1% к базовому значению соответствующей характеристики
+    При  гибели  флота  Капитан  так   же   погибает.   Под   "гибелью   флота"
+    подразумевается  уничтожение  всех  кораблей  флота.  Это  верно  как   для
+    атакующих флотов, так и для флотов, стоящих в удержании
+    Капитан на  планете  не  участвует  в  защите  планеты  при  атаке  -  этим
+    занимается Фортификатор. Зато при  полном  уничтожении  всего  планетарного
+    флота такой Капитан не погибнет
+    За каждый выигранный простой бой (САБы и миссия "Уничтожить" не  считаются)
+    Капитан  атакующего  флота  получает  1  пункт  опыта.  За   "победы"   над
+    неактивными игроками опыт не начисляется. Так же не начисляется опыт,  если
+    бой закончился выигрышем атакующего за 1 раунд
+    Капитаны всегда улучшают характеристики кораблей своего флота -  даже  если
+    участвуют в бою, за который они  не  получат  опыта:  атака  на  неактивных
+    игроков, удержание, САБ, уничтожение луны и т.д.
+    При наборе определенного количества опыта Капитан получает  новый  уровень.
+    Чем выше уровень - тем больше опыта нужно для получения следующего уровня
+    Повышение в уровне  дает  возможность  улучшать  умения  Капитанов.  Каждый
+    уровень умений дает 1% к базовому значению соответствующей характеристики
     Умения Капитана включают бонусы к щитам, броне и атаке
-    Уровни Капитана вкладываются в умения один раз и навсегда - поэтому заранее тщательно планируйте развитие своего Капитана
-
-    Уровни Капитанов указываются в списке юнитов на Обзоре Империи
-    На заднем фоне ячейки с уровнем выводится прогресс-бар развития Капитана с цветовым кодированием:
+    Уровни Капитана вкладываются в умения один раз и навсегда - поэтому заранее
+    тщательно планируйте развитие своего Капитана
+    Уровни Капитанов указываются в списке юнитов на Обзоре Империи.  На  заднем
+    фоне ячейки с уровнем выводится прогресс-бар развития Капитана  с  цветовым
+    кодированием:
       Пустая ячейка - Капитан не нанят, либо только что получил уровень
       Красный прогресс-бар - до следующего уровня осталось больше 50% опыта
       Оранжевый - не меньше 50% опыта, но меньше 80%
       Желтый - не меньше 80% опыта
       Зеленый - в следующем бою Капитан получит новый уровень
+    В списке флотов на странице "Флоты в полёте" и для своих флотов на странице
+    "Обзор планеты" если во флоте есть Капитан перед  количеством  кораблей  во
+    флоте высвечивается "*", а в попапе состава показывается его уровень
 
-    В списке флотов на странице "Флоты в полёте" и для своих флотов на странице "Обзор планеты" если во флоте есть Капитан перед количеством кораблей во флоте высвечивается "*", а в попапе состава показывается его уровень
+[#] Модуль "Продвинутый чат"
+    Требуется СН не ниже 36a1.7
+    Встроенная система команд с поддержкой алиасов команд
+    Встроенная система помощи по командам чата - команда /help
+    Добавлен список  игроков  в  чате  с  дополнительными  иконками  статуса  и
+    командами управления для админов
+    Возможность игрокам управлять своим состоянием видимости в чате  -  команда
+    /invisible. Администрация сервера (authlevel > 0) всегда видит невидимок
+    Возможность  отправлять  приватные  сообщения  другим  игрокам  -   команда
+    /whisper. Приватные сообщения выделяются специальным образом, видны во всех
+    каналах  и  сохраняются  в  истории  чата.  В  приватных  сообщенях  нельзя
+    употрблять форматирование цветом
+    Администраторы  имеют  возможность  запретить  игроку  писать  в   чат   на
+    определенный срок или вернуть такую возможность -  соответственно,  команды
+    /mute и /unmute. Запрет распространяется на все  каналы  и  на  возможность
+    писать личные сообщения. Соответствующая иконка в списке игроков лишает его
+    права голоса на 1 час
+    Администраторы имеют возможность блокировать и разблокировать игроков прямо
+    из чата - соответственно, команды /mute и /unmute. Иконка в списке  игроков
+    банит его на 1 неделю
+    Максимальное время нахождения игрока в списке онлайн совпадает с  таймаутом
+    чата на странице сервера - т.е. в  списке  онлайн  игрок  будет  виден  еще
+    некоторое время после выхода из чата
 
 
 [!] UBEv4
@@ -75,6 +124,7 @@
     выброшенных за  борт  ресурсов  и  от  20%  до  40%  обломков  кораблей.  В
     детерминированном симуляторе процент обломков на орбите всегда равен 30%, а
     обломки, выброшенные из трюма всегда составляют 50% от потерь
+    9. Шанс уничтожения луны теперь всегда лежит в пределах 1%-99%
     Боевой отчет теперь состоит из трёх частей: "Основная  информация  о  бое",
     "Боевые потери" и лог раундов
     "Основная информация о бое" показывает:
@@ -135,17 +185,21 @@
     Редизайн меню
     Изменен порядок расположения пунктов
     Высота пункта меню увеличена до 16 пикселов
-    Добавлены иконки. Размер иконки теперь ограничен 14 пикселами в высоту
+    Добавлены иконки. Размер иконки ограничен 14 пикселами в высоту
 
-[~] Навбар
-    Изменена разметка навбара, что бы его не перекашивало в случае вывода блока информации до него
+[~] Чат
+    Добавился новый BBCode "s" - зачёркнутый текст
+    В чате Альянса в нике участника теперь не указывается Альянс
+    Переформатирован вывод списка смайлов. Список смайликов теперь генерируется
+    автоматически из всего доступного списка
+    При открытии окна чата курсор позиционируется в строку набора сообщения
+    Реформатирование HTML-кода страницы чата
+    Переделан в preMVC
+    Три файла чата интегрированы в один
 [~] Новости
     Количество новостей ограничено 20-ю самыми свежими
     На странице Обзора планеты добавлена подсказка как закрыть окно со  свежими
     новостями
-[~] Чат
-    Добавился новый BBCode "s" - зачёркнутый текст
-    В чате Альянса в нике участника теперь не указывается Альянс
 [~] Флоты
     Изменены ограничения на отправку Шпионов. Их можно посылать  в  одиночку  в
     миссии Шпионаж, Передислокация и Транспорт. Во все остальные миссии Шпионов
@@ -158,20 +212,34 @@
     Исправлена ошибка смещения фона для производящих зданий
 [%] Флоты/Фаланга
     Исправлена ошибка сканирования пустого места во Вселенной
+[%] Навбар
+    Изменена разметка навбара, что бы его не перекашивало в случае вывода блока
+    информации до него
+    Исправлена ошибка неправильного цветового кодирования  остатков  энергии  в
+    планетбаре
+    Исправлена ошибка смены планеты на preMVC-страницах
+[%] Исследования
+    Добавлен патч, исправляющий багоюз на медленных MySQL серверах
+[%] Чёрный Рынок
+    Исправлена несовместимость с Opera 12.x
+    Исправлена уязвимость в Скупщике лома
 
 [@] Модули
     Устранена ошибка на случай, если модуль не возвращает темплейта. Такого  не
     должно происходить в нормальной ситуации
 [@] Код
     Переформатирован HTML-код обзора планеты
+    Поддержка опций движка в глобальном объекте $supernova
+    Поддержка опций на страницах в подмассиве 'pages'
 [@] БД
     В таблицу флотов добавлены идентификаторы планет старта/назначения
+[@] Документация
+    Обновлен конвертер txt2html
 
 
 
 Project "SuperNova.WS" Release 35 "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 [#] Модули: Расы
     Шесть фиксированных рас: земляне, луниты, меркурианцы, венериане, марсиане,
     республиканцы
