DOC-36d2: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #36d1#
+Текущая версия #36d2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -204,6 +204,12 @@ Project "SuperNova.WS" Release 36 "UBEv4 captains chat Happy New Year 2013!!!"
     Изменены ограничения на отправку Шпионов. Их можно посылать  в  одиночку  в
     миссии Шпионаж, Передислокация и Транспорт. Во все остальные миссии Шпионов
     тоже можно отсылать - но только в сопровождении других кораблей
+[~] Регистрация: Пароль теперь указывается в отдельной строке
+[~] Восстановление пароля: Новый пароль теперь указывается в отдельной строке
+[~] Админка/Бан:  Теперь  срок  бана  инкрементальный  -  каждый   новый    бан
+    увеличивает срок блокировки, а не заменяет его
+[~] Админка/Список игроков: Для забаненных игроков при наведении на ячейку бана
+    выскакивает тултип с ником забанившего, датой и причиной бана
 
 [%] Альянсы
     Исправлена надпись при отправке письма членам Альянса
@@ -223,6 +229,11 @@ Project "SuperNova.WS" Release 36 "UBEv4 captains chat Happy New Year 2013!!!"
 [%] Чёрный Рынок
     Исправлена несовместимость с Opera 12.x
     Исправлена уязвимость в Скупщике лома
+[%] Наемники: Исправлена ссылка на дерево развития
+[%] Чат: Исправлена ошибка появленя всех сообщений пользователя  в  чате  после
+    его удаления
+[%] Отпуск: Исправлено сообщение об ошибке на загрушке отпуска
+[%] Админка/Обслуживание: Исправлена ошибка обслуживания базы
 
 [@] Модули
     Устранена ошибка на случай, если модуль не возвращает темплейта. Такого  не
