SYS-37a1: All time-related code modified to support local client time

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,40 @@
 
 
 
-Текущая версия #37a0.0#
+Текущая версия #37a1#
 ~~~~~~~~~~~~~~~~~~~~~~~
+[!] Локальное (клиентское) и серверное время
+    Изменена процедура замера разницы между  локальным  и  серверным  временем.
+    Теперь она производится не каждый раз при обращении к серверу, а один раз и
+    сохраняется в БД. При заметном изменении разницы  можно  заново  произвести
+    эту  операцию,  установив  галочку  "Замерить   разницу   между   локальным
+    (клиентским) и серверным временем"  на  странице  настроек  пользователя  и
+    сохранив настройки. Замер будет произведен  при  следующем  открытии  любой
+    страницы игры
+    Теперь вместо локального или серверного времени одновременно показывается и
+    локальное, и серверное время в следующих местах:
+    1. В навбаре - часы реального времени
+    2. При отправке флота на экране выбора точки назначения - в  графе  времени
+    прибытия и возвращения флота
+    3. При отправке флота на экране подтверждения отправки -  в  графе  времени
+    прибытия и возвращения флота
+    Теперь вместо серверного времени показывается локальное в следующих местах:
+    1. В событиях навбара (флоты и экспедиции)
+    2. В новостях
+    3. На экране флотов в полете
+    4. На экране обзора планеты в списке летящих флотов
+    5. В чате и истории чата
+    6. В боевых отчетах
+    7. В сообщениях
+
+[~] Навбар
+    Переформатирован навбар для добавления локального и серверного времени
+    Теперь в событиях навбара (флоты и экпедиции) показывается тип  объекта,  к
+    которому относится событие (планета или луна)
+
+[%] Админка/Список пользователей: Убрана отладка
+
+[@] Переписаны некоторые процедуры fleet.js на использование jQuery
 
 
 
