CHT-37a3: Replaced colors for better readability

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,19 @@
 
 
 
-Текущая версия #37a1#
+Текущая версия #37a3#
 ~~~~~~~~~~~~~~~~~~~~~~~
+[#] Расширенный чат - chat_advanced v1c2
+    Требуется СН не ниже 37a3
+    Добавлена поддержка локального времени в чат и историю чата
+    Теперь можно использовать команды  при  выбранном  цвете  сообщения.  Ранее
+    такие команды не воспринимались системой чата
+    Произведена замена цветов для лучшей читаемости сообщений: red  ->  maroon,
+    blue -> cyan
+    Цвет green оставлен для пользвателей, а подтверждающие системные  сообщения
+    используют цвет lime - как и в остальном интерфейсе сервера
+    Системные и приватные сообщения теперь выделяются жирным шрифтом
+
 [!] Локальное (клиентское) и серверное время
     Изменена процедура замера разницы между  локальным  и  серверным  временем.
     Теперь она производится не каждый раз при обращении к серверу, а один раз и
@@ -41,6 +52,9 @@
     Переформатирован навбар для добавления локального и серверного времени
     Теперь в событиях навбара (флоты и экпедиции) показывается тип  объекта,  к
     которому относится событие (планета или луна)
+[~] Стандартный чат
+    Произведена замена цветов для лучшей читаемости сообщений: red  ->  maroon,
+    blue -> cyan
 
 [%] Админка/Список пользователей: Убрана отладка
 
