INT-fix-37a3.2: Misc interface fixes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #37a3.1#
+Текущая версия #37a3.2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Расширенный чат - chat_advanced v1c2
     Требуется СН не ниже 37a3
@@ -56,7 +56,12 @@
     Произведена замена цветов для лучшей читаемости сообщений: red  ->  maroon,
     blue -> cyan
 
-[%] Админка/Список пользователей: Убрана отладка
+[%] Админка/Список пользователей
+    Убрана отладка
+[%] Навбар
+    Исправлено смещение надписи в индикаторе исследования влево
+[%] Настройки пользователя
+    Названия групп настроек отцентрированы
 
 [@] Переписаны некоторые процедуры fleet.js на использование jQuery
 
