MOD-37a3.6: Changed merge algorythm for module variables

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #37a3.5#
+Текущая версия #37a3.6#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Расширенный чат - chat_advanced v1c2
     Требуется СН не ниже 37a3
@@ -64,6 +64,8 @@
     Названия групп настроек отцентрированы
 
 [@] Переписаны некоторые процедуры fleet.js на использование jQuery
+[@] Модули
+    Изменен алгоритм слияния массивов переменных в модулях
 
 
 
