--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,10 +11,20 @@
 
 
 
-Текущая версия #37a13.13#
+Текущая версия #37c0#
 ~~~~~~~~~~~~~~~~~~~~~~~
-[#] Расширенный чат - chat_advanced v1c2
-    Требуется СН не ниже 37a3
+
+
+Project "SuperNova.WS" Release 37 "Year of Work"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[#] payment_webmoney 0a4 - модуль приема платежей на кошельки WebMoney
+    Требуется СН не ниже 37a9.20
+    Поддержка нескольких кошельков с разными валютами
+    Поддержка SUCCESS_URL
+[#] payment_robokassa 0a1 - модуль платежей через агрегатора RoboKassa
+    Требуется СН не ниже 37a9.30
+[#] Расширенный чат - chat_advanced v1d0
+    Требуется СН не ниже 37a4.0
     Добавлена поддержка локального времени в чат и историю чата
     Теперь можно использовать команды  при  выбранном  цвете  сообщения.  Ранее
     такие команды не воспринимались системой чата
@@ -23,7 +33,108 @@
     Цвет green оставлен для пользвателей, а подтверждающие системные  сообщения
     используют цвет lime - как и в остальном интерфейсе сервера
     Системные и приватные сообщения теперь выделяются жирным шрифтом
+    Клик на имени игрока в списке онлайна теперь всегда добавляет команду  "/w"
+    в начало сообщения - а не в конец, как ранее
+    Скорость обновления  в  AJAX  части  чата  теперь  регулируется  переменной
+    'chat_refresh_rate'
+    Теперь игроки из онлайн-списка  исчезают  сразу  после  выхода  из  чата  -
+    таймаут попадания в список установлен как удвоенный 'chat_refresh_rate',  а
+    не как 'chat_timeout' ранее и вычисляется по дополнительному полю, а не  по
+    `chat_player_activity` как ранее
+[#] player_premium 1d3
+    Добавлена индикация уровня премиума в меню
+    Добавлена  индикация  остатка  времени  Премиума  в  пункт  меню   в   виде
+    прогресс-бара с цветовым кодированием:
+      Зеленый - осталось не менее 50% времени пермиума
+      Желтый - осталось меньше 50%, но не менее 25%
+      Оранжевый - осталось меньше 25%, но не менее 10%
+      Красный - осталось меньше 10%
+      Цвет фона - нет Премиума
+[#] Локализация/Узбекский
+    Добавлены переводы на узбекский для модулей: chat_advanced, player_premium,
+    player_race, player_race_units, unit_captain и unit_hope
 
+
+[!] Экономика/Плотность планеты
+    Добавлен новый параметр  планеты  -  плотность.  Он  определяет  химический
+    состав геосферы планеты и влияет на добычу ресурсов на ней
+    Плотность планеты лежит в диапазоне от 850 до 9250 кг/м3.  Плотность  новых
+    планет распределена случайным образом по нормальному распределению
+    Существует 7 классов плотности - с уникальным набором  коэфициентов  добычи
+    для каждого класса:
+      Ледяные планеты (<2000 кг/м3) - встречаются  очень  редко:  очень  низкая
+      добыча металла, очень низкая  добыча  кристаллов,  очень  высокая  добыча
+      дейтерия
+      Силикатные планеты (2000=3250 кг/м3) - встречаются  редко:  очень  низкая
+      добыча металла, очень высокая добыча  кристаллов  и  еще  хорошая  добыча
+      дейтерия
+      Каменные планеты (3250-4500 кг/м3) - встречаются  часто:  хорошая  добыча
+      металлов, высокая добыча кристаллов и низкая добыча дейтерия
+      Стандарнтые планеты (4500-5750 кг/м3) - встречаются очень часто:  хорошая
+      добыча металлов, хорошая добыча кристаллов и хорошая добыча дейтерия
+      Железнорудные  планеты  (5750-7000  кг/м3)  -  встречаются  часто:  очень
+      хорошая  добыча  металлов,  низкая  добыча  кристаллов  и  низкая  добыча
+      дейтерия
+      Металлические планеты (5750-7000 кг/м3)  -  встречаются  редко:  отличная
+      добыча металлов, низкая добыча кристаллов и низкая добыча дейтерия
+      Тяжелометаллические планеты (>7000  кг/м3)  -  встречаются  очень  редко:
+      великолепная добыча металлов, очень  низкая  добыча  кристаллов  и  очень
+      низкая добыча дейтерия
+    Стартовая планета имеет плотность 5500 кг/м3 и принадлежит  к  4-му  классу
+    плотности. Все луны имеют плотность 2500 кг/м3 и принадлежат ко 2-му классу
+    плотности
+    Тип ядра планеты можно изменить  за  ТМ.  Возможность  доступна  на  экране
+    управления  планетой  (Обзор  планеты  ->  Управление).   Стоимость   смены
+    высчитывается динамически и зависит от того,  насколько  сильно  отличается
+    текущий тип ядра от желаемого
+    Добавлено отображение типа ядра планеты на страницу "Обзор планеты"
+    На страницу "Обзор Империи"  добавлено  отображение  типа  ядра  планеты  с
+    цветовым кодированием:
+      Зеленый - тип ядра встречается очень часто
+      Желтый - тип ядра встречается часто
+      Оранжевый - тип ядра встречается редко
+      Красный - тип ядра встречается очень редко
+    В Новапедию добавлена статья про плотность и типы ядер планет
+[!] Артефакты
+    Добавлены два новых Артефакта: "Эвристический чип" и "Наностроитель"
+    Артефакты уменьшают на 1 час соответственно время текущего  исследования  и
+    время постройки/уничтожения текущего здания на текущей планете
+    Если  оставшееся  время  исследования/постройки/уничтожения  меньше  одного
+    часа, то Артефакт обнуляет время. Разница не переходит на следующий слот  в
+    очереди
+    Стоимость эвристического чипа составляет 20.000 ТМ
+    Стоимость наностроителя составляет 5.000 ТМ
+    В очередь построек добавлена возможность использовать Наностроитель  -  при
+    наличии Артефакта на складе
+    В очередь построек добавлена возможность использовать Эвристического чипа -
+    при наличии Артефакта на складе
+[!] Экономика
+    Изменен  алгоритм  расчетов  бонусов  добычи  ресурсов.  Список   изменений
+    приводится ниже:
+      1. Бонусы на добычу ресурсов улучшают так же базовую добычу на планете
+      2. Бонусы на добычу ресурсов так же увеличивают потребление сопутствующих
+      ресурсов - дейтерия (для Термоядерной Электростанции) и энергии (для всех
+      остальных шахт)
+      3. Бонусы на  добычу  ресурсов  улучшают  так  же  выработку  энергии  на
+      спутниках
+      4. Недостаток  энергии  влияет  на  базовую  добычу  -  т.е.  она  теперь
+      масштабируется в зависимости эффективности производства
+      5. Естественное производство  дает  100%  ресурсов  даже  при  недостатке
+      энергии
+    Изменен  алгоритм  работы  Термоядерной  электростанции.  Теперь   ТЭС   не
+    использует ресурсы со склада,  а  оперирует  только  балансом  производства
+    дейтерия. Т.е. ТЭС работает только при положительном  балансе  производства
+    дейтерия И генерации энергии одновременно. Это сделано  для  того,  что  бы
+    оставленная "без присмотра" ТЭС с отрицательным  балансом  по  дейтерию  не
+    выжрала весь ресурс со склада
+    Как следствие - ТЭС не отключается при положительном  балансе  производства
+    дейтерия и энергии, даже если количество дейтерия на планете равно  0.  Это
+    упростит своз ресурсов с планет, на которых энергия генерируется только  на
+    ТЭС
+    Теперь при эффективности добычи ресурсов менее 100%  вместе  с  актуальными
+    значениями добычи в ячейку добавляется рассчетное значение добычи в круглых
+    скобках. Это упростит балансировку производсва при недостатке ресурсов
+    Убрана задержка в обновлении информации о производстве ресурсов
 [!] Локальное (клиентское) и серверное время
     Изменена процедура замера разницы между  локальным  и  серверным  временем.
     Теперь она производится не каждый раз при обращении к серверу, а один раз и
@@ -34,27 +145,130 @@
     страницы игры
     Теперь вместо локального или серверного времени одновременно показывается и
     локальное, и серверное время в следующих местах:
-    1. В навбаре - часы реального времени
-    2. При отправке флота на экране выбора точки назначения - в  графе  времени
-    прибытия и возвращения флота
-    3. При отправке флота на экране подтверждения отправки -  в  графе  времени
-    прибытия и возвращения флота
-    Теперь вместо серверного времени показывается локальное в следующих местах:
-    1. В событиях навбара (флоты и экспедиции)
-    2. В новостях
-    3. На экране флотов в полете
-    4. На экране обзора планеты в списке летящих флотов
-    5. В чате и истории чата
-    6. В боевых отчетах
-    7. В сообщениях
-
-[~] Навбар
+      1. В навбаре - часы реального времени
+      2. При отправке флота на экране выбора точки назначения - в графе времени
+      прибытия и возвращения флота
+      3. При отправке флота на экране подтверждения отправки - в графе  времени
+      прибытия и возвращения флота
+    Теперь  вместо  серверного  времени  показывается  локальное  в   следующих
+    местах:
+      1. В событиях навбара (флоты и экспедиции)
+      2. В новостях
+      3. На экране флотов в полете
+      4. На экране обзора планеты в списке летящих флотов
+      5. В чате и истории чата
+      6. В боевых отчетах
+      7. В сообщениях
     Переформатирован навбар для добавления локального и серверного времени
+    Повышена устойчивость механизма к ошибкам на стороне клиента:  неправильный
+    часовой пояс, неправильные настройки DST  в  операционной  системе,  сильно
+    отстающие/спешащие часы итд
+[!] ТМ/Платежи
+    Понижена в 2,5 раза цена ТМ. Теперь за 1 гривну можно купить 2500 ТМ
+    Размер лота (шага покупки) установлен в 2500 ТМ
+    Изменена система бонусов за оптовые покупки ТМ:
+      от 50.000 ТМ - бонус 2% к количеству ТМ
+      от 100.000 ТМ - бонус 4% к количеству ТМ
+      от 200.000 ТМ - бонус 7% к количеству ТМ
+      от 250.000 ТМ - бонус 11% к количеству ТМ
+      от 375.000 ТМ - бонус 15% к количеству ТМ
+      от 500.000 ТМ - бонус 22% к количеству ТМ
+      от 750.000 ТМ - бонус 33% к количеству ТМ
+      от 1.000.000 ТМ - бонус 44% к количеству ТМ
+      от 1.250.000 ТМ - бонус 55% к количеству ТМ
+    Список доступных цен и список  скидок  строится  теперь  по  данным  модуля
+    sn_payment
+    Добавлена поддержка модулей с более чем одним количеством шагов при покупке
+    Добавлена поддержка мультивалютности
+    Добавлена поддержка SUCCESS_URL в платежных системах
+    Добавлена индикация внутренних курсов системы
+    Теперь большую часть информационных элементов на странице можно свернуть
+[!] Настройки пользователя/Смена имени пользователя
+    Добавлена  возможность  изменения  имени  пользователя  за  ТМ.   Стоимость
+    изменения - 100.000 ТМ
+    Игра сохраняет историю изменения имени пользователя. Только бывший владелец
+    может при желании вернуть себе старое имя - опять же за ТМ
+    Поиск по имени так же производится по старым именам. В случае, если  старое
+    имя  пользователя  соответствует  критериям  поиска,  в  результаты   будет
+    добавлена  еще  одна  строка,  в  которой   будет   указано   текущее   имя
+    пользователя, а после него в скобках  и  выделенное  цветом  -  старое  имя
+    пользователя. Никто не спрячется от своей истории!
+    Максимальная длина имени пользователя уменьшена до 32 символов
+    Переменная настроек сервера 'game_user_changename' отвечает за  возможность
+    смены имени пользователя самим пользователем:
+      0 - смена имени запрещена
+      1 - смена имени разрешена и свободна
+      2 - смена имени разрешена, но стоит ТМ. Стоимость смены имени  указана  в
+      переменной 'game_user_changename_cost' (100.000 ТМ по умолчанию)
+    По умолчанию включена смена пользователем своего имени за ТМ
+[!] Исследования
+    Изменен алгоритм рассчета эффективного уровня  лаборатории  и  необходимого
+    времени исследования при настройке сервера "Строить  лабораторию  во  время
+    исследования: Нет"
+    Теперь при  идущем  исследовании  блокируется  постройка/уничтожение  нано-
+    и/или лабораторий на все планетах
+    Теперь  блокируется  попытка  начать  исследование  на  планете,  где  идет
+    постройка/уничтожение нано- и/или лабораторий
+    Однако возможно начать исследование на другой планете. В таком исследовании
+    не будут участвовать все планеты где происходить  модификация  нано-  и/или
+    лабораторий. При этом по окончании постройки/уничтожения время исследования
+    не пересчитывается
+[!] Обновление
+    Теперь на время обновления сервер отключается
+    Теперь обновления можно запустить только из админ-консоли
+    В сообщение об обновлении сервера добавлена ссылка для Команды Сервера
+    Множество ускорений в процедуре обновления
+[!] Локализация/Узбекский
+    Добавлен перевод на узбекский от Акмалжона Мусаева
+[!] Очередь
+    Обновленная система очереди
+
+
+
+[+] Навбар
     Теперь в событиях навбара (флоты и экпедиции) показывается тип  объекта,  к
     которому относится событие (планета или луна)
-[~] Стандартный чат
+[+] Обзор Империи
+    Добавлена возможность управления  производством  шахт  со  страницы  Обзора
+    Империи
+    Дроп-дауны  в   колонке   "ИТОГО"   выставляют   соответствующие   проценты
+    производства для зданий соответствующего типа сразу на всех планетах
+    Кнопки  "Сохранить"  продублированы  в  заголовке  каждого  типа  юнитов  и
+    действуют сразу на всю страницу
+[+] Симулятор
+    Добвлена поддержка Фортификатора для защищающегося флота
+[+] Админка/Список игроков
+    Добавлены  две  колонки  со  сведениями  о  реферралах  игрока:  количестве
+    привлеченных игроков и количество заработанных ими ТМ
+[+] Чат
+    Добавлены смайлики
     Произведена замена цветов для лучшей читаемости сообщений: red  ->  maroon,
     blue -> cyan
+[+] Постройки
+    Теперь на луне можно строить Нанофабрику
+
+[-] Шпионаж
+    Временно отключен вывод технологий при  шпионаже  -  до  переделки  системы
+    шпионажа
+[-] Админка
+    Временно ограничен доступ к некоторым  админским  страницам  Модераторам  и
+    Операторам - до переделки системы доступа
+
+[~] Обзор Империи
+    Теперь не показываются "пустые" строчки для юнитов, которых нет в Империи
+    Для производства ресурсов и складов используется структура 'caps' планеты
+    Правильно считается общее количество полей на всех объектах Империи
+[~] Артефакты
+    Теперь  после  операций  по   покупке/применению   Артефакта   страница   с
+    соответствующим списком открывается на последнем Артефакте
+[~] Сообщения
+    Теперь если есть URL перехода после сообщения есть возможность  перейти  на
+    соответствующую  страницу  по  ссылке  "Продолжить"  под   сообщением,   не
+    дожидаясь таймаута
+[~] Рекорды
+    В несколько раз ускорена страница Рекордов
+[~] Скины
+    Заменена картинка "Черетеж ТОП"
 
 [%] Админка/Список пользователей
     Убрана отладка
@@ -62,8 +276,62 @@
     Исправлено смещение надписи в индикаторе исследования влево
 [%] Настройки пользователя
     Названия групп настроек отцентрированы
+[%] Админка/Обслуживание
+    Исправлена ошибка удаления покинутых планет
+[%] Сообщение
+    Исправлена ошибка отправки сообщения об окончании строительства  на  верфи.
+    Теперь сообщение отправляется один раз, а не каждый  раз,  когда  на  верфи
+    строится юнит
+[%] Меню
+    Исправлена смена названия пункта меню "Настройки" на "Опции" при заходе  на
+    страницу Альянса
+[%] Экспедиции
+    Исправлена редкая ошибка при которой можно было отправить экспедиций больше
+    максимального количества
+[%] Вселенная
+    Исправлен показ места в статистике и показ кнопки-ссылки на статистику  для
+    скрываемых из статистики пользователей (по умолчанию к таким  пользователям
+    относится команда сервера)
+[%] Боевой отчет
+    Исправлена ошибка открытия неправильной системы во Вселенной при  клике  на
+    координаты в отчете
+[%] Локализация/Английский
+    Исправлены сообщения боевого отчета
+[%] Локализация/Русский
+    Исправлены некоторые очепятки
+[%] Чёрный Рынок
+    Исправлена невозможность продать/купить ТОП на ЧР
+[%] Флоты
+    Исправлена ошибка при приглашении в САБ самого себя
+    Исправлено ошибочное сообщение "неисследованное пространство"  в  заголовке
+    страницы
+    Исправлена ошибка отправки флота дальше, чем позволяет запас топлива
 
-[@] Переписаны некоторые процедуры fleet.js на использование jQuery
+[@] Код
+    Расчеты уровня премиума вынесены в модуль
+    Изменены некоторые SQL-запросы
+    Добавлен простенький бенчмарк
+    infos.php  теперь  использует  прямое  обращение  к  production   юнита   и
+    подмассиву modifiers
+    eco_bld_structures.php теперь использует обращение к подмассиву modifiers
+    mercenaries и plans перенесены из таблицы powerup в таблицу unit
+    Константа MAX_OVERFLOW исключена из кода
+    Обработан eco_get_planet_caps и связанные процедуры
+    Добавлена функция вычисления случайного числа, распределенного нормально
+[@] Код/БД
+    Артефакты перенесены из таблицы игроков в таблицу юнитов
+    Удалены лишние поля Технологий из таблицы игрока
+    Добавлены констраинты в некоторые таблицы
+    Удалена колонка `que` из таблицы `users`
+    premium перенесен из таблицы powerup в таблицу unit
+    Исследования и очередь исследований перенесены в соответствующие таблицы
+[@] Код/JS
+    Переписаны некоторые процедуры fleet.js на использование jQuery
+[@] MVC
+    $sn_i18n['pages'] -> $sn_mvc['i18n']
+[@] Обслуживание
+    Процедура обслуживания теперь так же удаляет боевые отчеты  UBE  старше  60
+    дней
 [@] Модули
     Изменен алгоритм слияния массивов переменных в модулях
 
@@ -116,7 +384,6 @@ Project "SuperNova.WS" Release 36 "UBEv4 captains chat Happy New Year 2013!!!"
     В списке флотов на странице "Флоты в полёте" и для своих флотов на странице
     "Обзор планеты" если во флоте есть Капитан перед  количеством  кораблей  во
     флоте высвечивается "*", а в попапе состава показывается его уровень
-
 [#] Модуль "Продвинутый чат"
     Требуется СН не ниже 36a1.7
     Встроенная система команд с поддержкой алиасов команд
@@ -140,7 +407,6 @@ Project "SuperNova.WS" Release 36 "UBEv4 captains chat Happy New Year 2013!!!"
     Максимальное время нахождения игрока в списке онлайн совпадает с  таймаутом
     чата на странице сервера - т.е. в  списке  онлайн  игрок  будет  виден  еще
     некоторое время после выхода из чата
-
 
 [!] UBEv4
     Написан с нуля боевой движок и боевые отчеты
