--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,6 +11,220 @@
 
 
 
+Project "SuperNova.WS" Release Candidate 37RC0 "Admin astro expo news bugfix"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[#] player_award 0a2
+    (!) Новый модуль
+        Раздел "Награды и достижения" на странице Императора, видимый всем
+        Поддержка орденов, медалей, памятных знаков, вымпелов, бэйджей
+        Отдельный тип опции рендера ника
+    (!) Орден Спонсора четырех степеней - в комплекте
+        Иконка Ордена Спонсора в нике везде, где допускаются иконки
+    (!) Бессмертный
+        Памятный знак "Бессмертный"
+        Знак начисляется автоматически при покупке хотя бы одной единицы ММ
+        Статус "Бессмертного" означает сохранение аккаунта при автоматической чистке БД (Админка/Обслуживание)
+[#] misc_radio 0a0
+    (!) Новый модуль
+        Новый пункт меню 'Радио "Космос"', открываюший в новом окне плеер радио
+[#] chat_advanced 2c1
+    (!) Перманентный чат (миничат)
+        Реализован миничат через iframe. Чат делается перманентным при нажатии ссылки "Прикрепить" под списком онлайна пользователей. Можно прикреплять как общий чат, так и чат Альянса. Одновременно может быть прикреплен только один чат - общий или Альянса
+        Прикрепленный чат можно открепить - ссылка "Открепить" под списком онлайна в прикрепленном чате
+        Можно изменять соотношение фреймов, отведенных под основной экран и миничат. Для этого нужно потянуть за разделитель между фреймами
+    (+) История чата
+        Добавлены кнопки листания на страницу вперед/назад, на первую/последнюю страницы истории
+    (+) Смайлики
+        Добавлен смайлик :sarcasm:
+        Теперь смайлики размещены в отдельном попапе и не занимают лишнее место. Вызвать попап можно кликнув на смайлик слева от строки ввода сообщения
+    (~) Whisper
+        Команда "/w" теперь корректно работает с никами, в которых есть пробелы. Для этого ник нужно заключить в двойные кавычки. Подсказка по команде изменена соответствующим образом
+        Изменен формат вывода шепота: "(от кого) -> (кому)> (сообщение)"
+        Теперь клик на имени собеседника в списке сообщений так же добавит в строку текущего сообщения команду "/w <имя адресата> ". Так будет легче переписываться с игроками, находящимися вне чата
+    (~) Интерфейс
+        Все неявные элементы, клик по которым совершает какое-либо действие на странице (например, ник в списке онлайна) выделены соответствующим образом
+        Теперь ники подчеркиваются цветом ника и не подчеркиваютя иконки (если таковые есть в оформлении)
+        Изменен алгоритм смены фокуса, что бы окно миничата не мешало работе в основном окне
+        Убрана дублирующаяся надпись "Игроки онлайн", а количество игроков перенесена в заголовок списка онлайна
+    (~) Клавиатура
+        По "Ctrl+Enter" теперь так же отсылаются сообщения
+    (~) Таймаут
+        Теперь при отключении чата по таймауту можно обновить окно чата/миничата соответсвующей ссылкой, которая появляется вместо строки ввода сообщения
+        Теперь таймаут так же убирает список игроков онлайн
+[#] player_race 2d0
+    (+) Марс
+        Марсиане так же получают +1 уровень к Астрокартографии
+    (+) Родные миры
+        Теперь родной мир можно выбрать сразу на странице "Родные миры"
+[#] unit_res_metamatter 0a0
+    (!) Новый модуль
+        Модуль активирует новый ресурс в игре - Метаматерию
+        Метаматерия - новый тип ресурсов, который можно приобрести только за реальные деньги. Таким образом отделяются ресурсы, которые можно приобрести внутри игры и ресурсы, которые можно только купить. Это нужно в первую очередь для добавления услуг и сервисов, которые требуют от движка платежей в реальных деньгах - например, СМС-информирование об атаках
+        Так же это позволит добавить в игру больше возможностей для взаимодействия игроков, не опасаясь сильного дисбаланса от такого взаимодействия и/или смещения экономики игры в сторону pay-2-win
+        Добавлена возможность начислить игроку ММ из админки
+        Модуль поставляется в пакете с любым платежным модулем
+        Добавлена иконка Метаматерии в навбар
+        Добавлено поле для общего количества полученной метаматерии - в частности для получения статуса "Бессмертный" (см. ниже). Статус "Бессмертный" работает так же при отсуствии модуля player_award
+        В админку добавлена страница просмотра платежей с фильтрами
+[#] Модули платежей
+    Все модули платежей полностью переписаны
+    Максимальная унификация модулей - все общие части вынесены в модуль-родитель
+    Все сообщения внутри модуля генерируются во внутренних кодах СН
+    Добавлена подсистема конвертации внутренних кодов в коды платежный систем (там, где это имеет смысл)
+    Все модули переделаны под работу с Метаматерией, а не ТМ
+
+
+[!] Технологии/Астрокартография
+    Экспедиционная технология и Колонизационная технология заменены одной технологией Астрокартографии
+    Стоимость имеющихся уровней устаревших технологий возвращена на главную планету игрока, а сами технологии удалены
+    Устаревшие технологии, находящиеся в исследовательской очереди игроков, удалены, а их стоимость возвращена на планету, где была запущена технология
+    По умолчанию убрано ограничение на максимальное количество колоний
+    Уровень развития Астрокартографии влияет на:
+      1. Максимальное количество колоний
+      2. Максимальное количество экспедиций
+      3. Максимальное время отправки флота в экспедицию
+    Теперь видно текущее и максимальное количество колоний:
+      1. В Обзоре Империи (первая колонка, вторая строка)
+      2. На странице выбора кораблей во флот при переходе на неё из Обзора Вселенной с миссией "Колонизация"
+      3. На странице выбора миссии "Колонизация"
+[!] Полностью переписаны Экспедиции
+    Экспедиции теперь планово-прибыльные, т.е. полеты в экспу одним и тем же флотом в среднем будут приносить прибыль, а не убытки, как раньше
+    Количественные результаты Экспедиций (нахождение флота, ресурсов, ТМ) теперь привязаны к стоимости отправляемого флота. Т.е. чем дороже флот в пересчете на ресурсы - тем больше будет найдено в Экспедиции
+    Экспедиции стали средне- и высокоуровневым контентом - существуют минимальные размеры флотов, которые вообще имеет смысл посылать в Экспедиции. Меньшие флоты попросту не будут ничего привозить (см.ниже). Хотя, например, фармить ресурсы транспортами можно прямо со старта игры - учитывая плановую прибыльность обновленных Экспедиций это вполне имеет смысл, особенно "шахтерам"
+    Теперь максимальная длительность Экспедиции зависит от уровня Астротехнологии - 1 час за каждый уровень технологии
+    Теперь время нахождения флота в Экспедиции влияет на шанс найти что-либо в процессе миссии - как на положительный шанс, так и на отрицательный
+    Изменены шансы происходящих событий (отношения расчитаны для обновленной Экспедиции в 1 час):
+      1. Шанс того, что в Экспедиции не произойдет ничего, увеличен примерно в 2,5 раза
+      2. Шанс потери флота уменьшен почти в 20 (!) раз
+      3. Шанс нахождения ресурсов увеличен на треть
+      4. Шанс нахождения флота уменьшен на треть
+      5. Шанс нахождения ТМ увеличен на треть
+    Изменено количество находимых в Экспедиции ништяков и оно теперь привязано к общей стоимости флота:
+      0. Количество ништяков может быть "Нормальным", "Большим" и "Очень большим". Соответственно меняются возможное количество находимых ништяков (идея упёрта с Огейма)
+      1. Количество ништяков отбалансированно для достижения планово-прибыльного характера Экспедиции и для компенсации изменения шанса происходящих событий
+      2. Количество находимых ТМ теперь вариабельно. Максимальное количество находимых ТМ - 10.000. Коэфцициент пересчета стоимости флота в ТМ зависит от курса ТМ (который, в свою очередь, зависит от скорости добычи ресурсов). Чем он выше - тем больше кораблей надо на шанс получения 1 ТМ. Для ориентировки - на х1 нужно запустить 10 эсминцев для получения 1 ТМ
+      3. Качество найденного флота теперь очень сильно зависит от качества исследовательского флота: все находимые корабли дешевле, чем самый дорогой корабль в Экспедиции. Максимальная стоимость флота зависит от скорости добычи на сервере
+      4. Качество найденных ресурсов теперь вариабельно. В среднем находится 50% металла, 37,5% кристалла и 12,5% дейтерия. Однако в частном случае доли ресурсов могут варьироваться в очень широких пределах. Максимальное количество находимых ресурсов прямо пропорционально скорости добычи ресов
+    Теперь за полёты в Экспедиции начисляется экспедиционный опыт. За набор экспедиционного опыта начисляются уровни. При получении нового уровня начисляется 1.000 ТМ
+    Количество опыта для получения уровня - геометрическая прогрессия с первым членом 10 и показателем 1,05. Ниже дается для ориентировки небольшая таблица: в первой колонке - экспедиционный уровень, во второй - количество опыта для перехода на следующий уровень, в третьей - общее количество экспедиционного опыта для перехода на следующий уровень. Собственно, таблица:
+        1      10        10
+        2      10        20
+        3      11        31
+        4      11        42
+        5      12        54
+        6      12        66
+        7      13        79
+        8      14        93
+        9      14       107
+       10      15       122
+       15      19       209
+       20      25       321
+       25      32       465
+       30      41       650
+       35      52       887
+       40      67     1.189
+       45      85     1.575
+       50     109     2.070
+       75     369     7.530
+      100   1.252    26.052
+      150  14.361   301.323
+      200 164.691 3.458.217
+    Посмотреть текущее текущий уровень, общее количество экспедиционного опыта и необходимое количество для перехода на следующий уровень можно на странице "Император"
+    Для облегчения регулярных Экспедиций с одной и той же планеты добавлена новая кнопка на экран подбора флота. При максимальном количестве экспедиций (Х) более одной доступна новая кнопка на странице подбора флота - "1/X"
+[!] Админка
+    Полностью переписана страница "Список сообщений"
+    Полностью переписана страница "Флоты в полёте". Процедуры унифицированы с пользовательской частью
+    Полностью переписана страница "Обзор"
+    Полностью переписана страница "Добавить луну"
+    Переработана страница "Записи система логов"
+    Переработана страница "Начисление ТМ"
+    Переработана страница "Начисление ММ"
+    Меню в админке переделано на динамическое - по типу меню игроков
+    Теперь сразу после обслуживания происходит обновление статистики - для устранения разрывов в местах игроков, которые могут появится из-за удаления старых аккаунтов
+    Убраны операции очистки таблиц, дублирующие работу констраинтов
+    Теперь для запуска обновления из админки используется гораздо более безопасная проверка по AUTHLEVEL пользователя, а не по HTTP_REFERRER вызывающей страницы
+[!] Страница игрока
+    Добавлена возможность просмотреть страницу игрока (ака "Император")
+    Для этого нужно кликнуть на иконку "Император", которая доступна:
+      1. На странице статистики
+      2. В результатах поиска
+      3. В Обзоре Вселенной
+
+
+[+] Новости
+    Добавлена информация о публикаторе новости
+    Изменено отображение новости
+    Теперь свежие новости показываются на всех страницах залогиненного пользователя
+    Теперь для того, что бы скрыть свежие новости не обязательно открывать страницу новостей - достаточно кликнуть на кнопку "Закрыть" в правом верхнем углу списка новостей
+    Добавлена вторичная сортировка новостей по ID
+[+] Меню
+    Переформатировано меню - убраны дублирующиеся пункты, ЧаВо перенесено вверх
+    Пункты меню "ЧаВо", "Форум" и "Правила игры" открываются в новых окнах
+[+] Обзор Империи
+    Оптимизирован HTML-код страницы. В среднем в минифицированном состоянии выигрыш составил порядка 6 кб на 1 планету/луну. Чем больше объектов в Империи и чем больше типов юнитов - тем больше выигрышь
+    Строка таблицы с координатами перемещена под строку с названием планет для унификации вывода
+    Строка с количеством секторов убрана - она дублирует информацию на иконке планеты
+
+
+[~] Отпуск
+    Минимальный срок отпуска составляет 1 неделю
+    Введен таймаут на следующий отпуск - 1 недели с момента выхода из предыдущего отпуска
+[~] Удержание
+    Длительность удержания теперь находится в промежутке от 1 до 12 часов
+[~] Статистика
+    Теперь на странице статистики показывается так же время следующего обновления
+    Время предыдущего и следующего обновления учитывает разницу между локальным и серверным временем
+[~] Навбар
+    Если страница с навбаром открыта во фрейме (например, при прикреплении чата) в под навбаром появляется ссылка "Обновить страницу", при нажатии которой страница по фрейме будет обновлена
+[~] Локальное время
+    Теперь замер разницы между клиентским и серверным временем производится автоматически каждый час
+
+
+[%] Альянсы
+    Исправлена ошибка "налазания" длинного внешнего текста на логотип Альянса
+[%] Флоты
+    Исправлена ошибка при отправке Капитана с миссией "Транспорт"
+    Усилена защита от отправки флотов в нетранспортную миссию с ресурсами
+[%] Сообщения
+    Исправлена ошибка в сообщениях, если указан неправильный класс сообщений
+[%] Поиск
+    Исправлена ссылка на страницу статистики для ранка 1000+
+    Убрана ссылка на страницу статистики для неучаствующих в подсчете аккаунтов (например - Адмиинистрации сервера)
+[%] Боевой отчет
+    Устранено появление строки "Дата и время" для симулированных отчетов при ненулевой разнице клиентского и серверного времени
+[%] Настройки
+    Исправлена индикация режима защиты планет Администрации
+    Исправлено отображение статуса удаления аккаунта
+
+
+[@] admin/Sypex Dumper
+    Sypex Dumper обновлен до версии 2.0.11
+[@] Темплейты
+    Добавлена поддержка нескольких темплейтов
+    Меню и навбар могут быть отключены параметрами в темплейте
+    Добавлена возможность подгрузки серверных CSS для скинов
+[@] Рендер ников
+    Добавлена опция, позволяющая присвоить нику дополнительные CSS-классы
+[@] БД
+    Изменена таблица `payment`
+[@] Расписание
+    Изменен формат расписания. Теперь он определяет интервал запуска задачи и имеет вид:
+      Г-М-Д Ч:И:С
+    где Г, М, Д, Ч, И, С - соответственно длина интервала в годах, месяцах, днях, часах, минутах и секундах
+    Значения левее первой значащей цифры можно не указывать. Например, "0-0-1 0:0:0" можно записать как "1 0:0:0" и это будет означать "запустить задачу раз в сутки"
+    Нулевые значения можно опустить. Например, предыдущий интервал можно записать так же в виде "1 ::". Обращаю внимание на пробел между "1" и ":"! Пробел - значащий разделитель и его опускать в данном случае нельзя, потому что интервал "1::" будет истолкован как "запустить задачу раз в час"!
+[@] Вселенная
+    Добавлены картинки-плейсхолдеры для аватара/лого Альянса/миниатюры планеты
+[@] Прочее
+    $time_now теперь определяется из $microtime
+    Новая процедура определения локальных путей для поддержки PHP 5.3+
+    Методы локализации инкапсулированы в класс и при работе с объектами вызовы процедур редиректят в методы объекта
+    Убрана ошибка уровня PHP_STRICT в классах кэширования
+    message() теперь работает через PTE-объект
+    Чёрный рынок переписан на использование result вместо message()
+
+
+
 Project "SuperNova.WS" Release 37 "Year of Work"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [#] payment_webmoney 0a4 - модуль приема платежей на кошельки WebMoney
