DOC-39a10.21: Changelog editing

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -196,6 +196,7 @@ Stay out of my shed
         Аморальный подсознанием
         Поэтому крисберги эффективнее людей с кристаллическими компьютерами - и поэтому же опаснее
         Крисберг - гибрид человека и кристалла, который перешел Предел Человечности
+    [*] Текст: Микробиотики - антибиотики из микроботов
 
 
 РЕЛИЗ 40
@@ -360,7 +361,7 @@ Stay out of my shed
 ======================
 
 
-Текущий билд #39a10.13#
+Текущий билд #39a10.21#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять flt_lastUpdate
@@ -670,13 +671,8 @@ sec_restore_password_confirm($confirm_safe, $result); - кукесы тут вы
 [10.07.2014 22:43:17] Sabretooth> "С каждым уровнем можно хранить на четыре межпланетных или двенадцать ракет-перехватчиков больше" - как-то не правильно
 
 
-Настраиваемая ссылка на ридми
 
 Переименование планеты - 1кТМ. Или 100 ТМ. Глянуть по системе
-
-
-
-
 
 
 
